Actions
Bug #12405
closedaudioens: variable may be used uninitialized
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 9:
../../common/io/audio/drv/audioens/audioens.c: In function 'audioens_count': ../../common/io/audio/drv/audioens/audioens.c:698:12: error: 'page' may be used uninitialized in this function [-Werror=maybe-uninitialized] 698 | frameno = audioens_readmem(port->dev, page, offs) >> 16; | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Testing done: build/install/boot. I have no actual hardware for this driver.
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 001481f6cda9064930e4caee83ed1a8f0c801b8b
commit 001481f6cda9064930e4caee83ed1a8f0c801b8b Author: Toomas Soome <tsoome@me.com> Date: 2020-08-04T15:26:16.000Z 12405 audioens: variable may be used uninitialized Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Rob Johnston <rob.johnston@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions