12405 audioens: variable may be used uninitialized

../../common/io/audio/drv/audioens/audioens.c: In function 'audioens_count':
../../common/io/audio/drv/audioens/audioens.c:698:12: error: 'page' may be used uninitialized in this function [-Werror=maybe-uninitialized]
  698 |  frameno = audioens_readmem(port->dev, page, offs) >> 16;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

Change-Id: I82deffa0f42acc8a22e20a0dd41a3c60de900ec8